// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`combining.jsx 1`] = `"export const Component = () => <div className={\\"x1dqz7z3 x1e4w2a9\\"} />;"`;

exports[`combining.jsx 2`] = `
.x1dqz7z3 {color:red}
.x1e4w2a9 {font-size:16px}
`;

exports[`conditional.jsx 1`] = `
"export const LogicalAndExpression = props => <div className={(props.isBlue ? \\"x1vong5g\\" : \\"x1dqz7z3\\") + \\" \\" + \\"x1e4w2a9\\"} />;
export const LogicalExpressionDeterministic = () => <div className={\\"x1vong5g\\"} />;
export const IgnoreFalsey = () => <div className={\\"\\"} />;
export const SimpleTernaryExpression = () => <div className={\\"x1dqz7z3 x1e4w2a9\\"} />;"
`;

exports[`conditional.jsx 2`] = `
.x1vong5g {color:blue}
.x1dqz7z3 {color:red}
.x1e4w2a9 {font-size:16px}
`;

exports[`conditional-with-dce.jsx 1`] = `"export const LogicalAndExpression = props => <div className={(props.isBlue ? \\"x1vong5g\\" : \\"x1dqz7z3\\") + \\" \\" + \\"x1e4w2a9\\"} />;"`;

exports[`conditional-with-dce.jsx 2`] = `
.x1vong5g {color:blue}
.x1dqz7z3 {color:red}
.x1e4w2a9 {font-size:16px}
`;

exports[`media-query.jsx 1`] = `
"export const Component = () => <div className={\\"x1dqz7z3 xr3sc1d\\"} />;
export const ComponentWithDuplicateMediaStyle = () => <div className={\\"x1ug2cuz x1rt9ji8\\"} />;
export const ComponentWithOverriddenMediaStyle = () => <div className={\\"x17bvl1g x1vx1kxu\\"} />;
export const ComponentWithNestedPseudo = () => <div className={\\"xfxv4bd x1p5ktpm\\"} />;
export const ComponentWithParentPseudo = () => <div className={\\"xashdej x4fean5\\"} />;"
`;

exports[`media-query.jsx 2`] = `
.x1dqz7z3 {color:red}
.x1ug2cuz {color:black}
.x17bvl1g {color:brown}
.xfxv4bd {color:silver}
.xashdej {color:wheat}
@media screen and (min-width:678px){
.xr3sc1d {color:green}
.x1rt9ji8 {color:yellow}
.x1vx1kxu {color:salmon}
.x1p5ktpm:hover {color:gold}
.x4fean5:hover {color:sandybrown}
}
`;

exports[`merging.jsx 1`] = `"export const Component = () => <div className={\\"xp5623v\\"} />;"`;

exports[`merging.jsx 2`] = `.xp5623v {color:green}`;

exports[`nested.jsx 1`] = `"export const Component = () => <div className={\\"x194k0cs x1c2oj3k x1pvsa1a x14cvjxa xopjt0q\\"} />;"`;

exports[`nested.jsx 2`] = `
.x194k0cs h1 {font-size:32px}
.x1c2oj3k section {font-size:16px}
.x1pvsa1a section h1 {font-size:28px}
@media screen and (min-width:678px){
.x14cvjxa section {font-size:18px}
.xopjt0q section h1 {font-size:42px}
}
`;

exports[`pseudo.jsx 1`] = `
"export const Component = () => <div className={\\"x1dqz7z3 x1jz5mb\\"} />;
export const ComponentWithDuplicatePseudoStyle = () => <div className={\\"x1ug2cuz x17vggq8\\"} />;
export const ComponentWithOverriddenPseudoStyle = () => <div className={\\"x17bvl1g xjhh7o6\\"} />;"
`;

exports[`pseudo.jsx 2`] = `
.x1dqz7z3 {color:red}
.x1jz5mb:hover {color:green}
.x1ug2cuz {color:black}
.x17vggq8:hover {color:yellow}
.x17bvl1g {color:brown}
.xjhh7o6:hover {color:salmon}
`;

exports[`simple.jsx 1`] = `"export const Component = () => <div className={\\"x1e4w2a9\\"} />;"`;

exports[`simple.jsx 2`] = `.x1e4w2a9 {font-size:16px}`;
